finished right sidebar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
       rel="stylesheet"
     />
@@ -77,13 +81,47 @@
             <img src="img/lol-icon.png" width="48px" />
           </div>
           <div class="infos">
-            <span class="username">Probicieux</span
-            ><span class="status">Disponible</span>
+            <span class="username">nom joueur</span
+            ><span class="status">disponible</span>
           </div>
         </div>
-        <div class="right-sidebar__content__dropdown-button"></div>
-        <div class="right-sidebar__content__dropdown-button"></div>
-        <div class="right-sidebar__content__dropdown-button"></div>
+        <div class="right-sidebar__content__dropdown-button">
+          <div class="user-amount">0</div>
+          <div class="category-name">amis</div>
+          <div class="toggler"><i class="fas fa-chevron-down"></i></div>
+        </div>
+        <div class="right-sidebar__content__dropdown-button">
+          <div class="user-amount">2</div>
+          <div class="category-name">autres jeux</div>
+          <div class="toggler"><i class="fas fa-chevron-up"></i></div>
+        </div>
+        <div class="right-sidebar__content__user-button">
+          <div class="profil-icon">
+            <img src="img/lol-icon.png" width="48px" />
+          </div>
+          <div class="infos">
+            <span class="username">nom amis 1</span
+            ><span class="status">disponible</span>
+          </div>
+        </div>
+        <div class="right-sidebar__content__user-button">
+          <div class="profil-icon">
+            <img src="img/lol-icon.png" width="48px" />
+          </div>
+          <div class="infos">
+            <span class="username">nom amis 2</span
+            ><span class="status">disponible</span>
+          </div>
+        </div>
+        <div class="right-sidebar__content__dropdown-button">
+          <div class="user-amount">0</div>
+          <div class="category-name">hors ligne</div>
+          <div class="toggler"><i class="fas fa-chevron-down"></i></div>
+        </div>
+        <div class="right-sidebar__bottom-actions">
+          <div class="add-friend"><i class="fas fa-user-plus"></i></div>
+          <div class="search-user"><i class="fas fa-search"></i></div>
+        </div>
       </div>
     </div>
     <script src="app.js"></script>
